--- a/ui-tests/tests/notebooks/Notebook.ipynb
+++ b/ui-tests/tests/notebooks/Notebook.ipynb
@@ -7,9 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jupytergis_lab import CadDocument\n",
+    "from jupytergis_lab import GISDocument\n",
     "\n",
-    "doc = CadDocument()\n",
+    "doc = GISDocument()\n",
     "\n",
     "doc.add_cone().add_sphere(radius=0.8, position=[0, 0, 1]).cut()"
    ]
@@ -32,10 +32,10 @@
    "outputs": [],
    "source": [
     "# Creating a gear wheel \n",
-    "from jupytergis_lab import CadDocument\n",
+    "from jupytergis_lab import GISDocument\n",
     "import math\n",
     "\n",
-    "doc = CadDocument()\n",
+    "doc = GISDocument()\n",
     "\n",
     "radius = 5\n",
     "num_teeth = 3\n",
@@ -76,9 +76,9 @@
     "from OCC.Core.BRepPrimAPI import BRepPrimAPI_MakeBox, BRepPrimAPI_MakeSphere, BRepPrimAPI_MakeCylinder\n",
     "from OCC.Core.gp import gp_Pnt\n",
     "\n",
-    "from jupytergis_lab import CadDocument\n",
+    "from jupytergis_lab import GISDocument\n",
     "\n",
-    "doc = CadDocument()\n",
+    "doc = GISDocument()\n",
     "\n",
     "box_shape = BRepPrimAPI_MakeBox(10, 20, 30).Shape()\n",
     "\n",
