--- a/examples/Notebook.ipynb
+++ b/examples/Notebook.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jupytergis import GISDocument"
+    "from jupytergis_lab import GISDocument"
    ]
   },
   {
@@ -34,6 +34,16 @@
    "outputs": [],
    "source": [
     "doc = GISDocument()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0314dc6-9d79-4361-8b86-60b84f543cf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc"
    ]
   }
  ],
@@ -53,7 +63,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
