--- a/ui-tests/tests/notebooks/Notebook.ipynb
+++ b/ui-tests/tests/notebooks/Notebook.ipynb
@@ -11,6 +11,13 @@
     "\n",
     "doc = GISDocument()\n",
     "\n",
+    "doc.add_raster_layer(\n",
+    "    url=\"https://mt1.google.com/vt/lyrs=y&x={x}&y={y}&z={z}\",\n",
+    "    name=\"Google Satellite\",\n",
+    "    attribution=\"Google\",\n",
+    "    opacity=0.6\n",
+    ")\n",
+    "\n",
     "doc"
    ]
   }
@@ -31,7 +38,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
