--- a/examples/Notebook.ipynb
+++ b/examples/Notebook.ipynb
@@ -39,6 +39,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f4a7000c-1bfc-4d41-8a0b-5c82c6e67716",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5938ba70-36d7-4af3-b877-815464ef6d1a",
    "metadata": {},
    "outputs": [],
@@ -58,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc.add_geojson_layer(path=\"examples/france_regions.json\")"
+    "doc.add_geojson_layer(path=\"france_regions.json\")"
    ]
   }
  ],
