--- a/examples/Notebook.ipynb
+++ b/examples/Notebook.ipynb
@@ -33,17 +33,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc = GISDocument()"
+    "doc = GISDocument(\"france_hiking.jGIS\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0314dc6-9d79-4361-8b86-60b84f543cf9",
+   "id": "f4a7000c-1bfc-4d41-8a0b-5c82c6e67716",
    "metadata": {},
    "outputs": [],
    "source": [
     "doc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5938ba70-36d7-4af3-b877-815464ef6d1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc.add_raster_layer(\n",
+    "    url=\"https://mt1.google.com/vt/lyrs=y&x={x}&y={y}&z={z}\",\n",
+    "    name=\"Google Satellite\",\n",
+    "    attribution=\"Google\",\n",
+    "    opacity=0.6\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69ac2a9a-d9a9-4170-b1f5-451b9fd5780e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc.add_geojson_layer(path=\"france_regions.json\")"
    ]
   }
  ],
@@ -63,7 +88,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
