Python API + tests

--- a/ui-tests/tests/notebooks/Notebook.ipynb
+++ b/ui-tests/tests/notebooks/Notebook.ipynb
@@ -20,6 +20,59 @@
     "\n",
     "doc"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b65dce55-9364-479e-ac7b-384cda9f422e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc = GISDocument(latitude=40.775, longitude=-73.973, zoom=13)\n",
+    "\n",
+    "doc.add_raster_layer(\n",
+    "    url=\"https://mt1.google.com/vt/lyrs=y&x={x}&y={y}&z={z}\",\n",
+    "    name=\"Google Satellite\",\n",
+    "    attribution=\"Google\",\n",
+    "    opacity=0.6\n",
+    ")\n",
+    "\n",
+    "doc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4a2ebd4-3d48-4aa7-8999-6684fdae0812",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc = GISDocument(latitude=40.775, longitude=-73.973, zoom=13)\n",
+    "\n",
+    "doc.add_raster_layer(\n",
+    "    url=\"https://mt1.google.com/vt/lyrs=y&x={x}&y={y}&z={z}\",\n",
+    "    name=\"Google Satellite\",\n",
+    "    attribution=\"Google\",\n",
+    "    opacity=0.6\n",
+    ")\n",
+    "\n",
+    "doc.add_vectortile_layer(\n",
+    "    url=\"https://planetarycomputer.microsoft.com/api/data/v1/vector/collections/ms-buildings/tilesets/global-footprints/tiles/{z}/{x}/{y}\",\n",
+    "    source_layer=\"bingmlbuildings\",\n",
+    "    max_zoom=13,\n",
+    "    min_zoom=13\n",
+    ")\n",
+    "\n",
+    "doc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acb9c565-d0f2-4b5d-9fca-a8fcefa3bd61",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
