Add python API for image and video layers

--- a/examples/Notebook.ipynb
+++ b/examples/Notebook.ipynb
@@ -70,6 +70,56 @@
    "source": [
     "doc.add_geojson_layer(path=\"france_regions.json\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3629be32-bf06-4f68-a734-9af3cc17a7e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc.add_image_layer(\n",
+    "    url=\"https://maplibre.org/maplibre-gl-js/docs/assets/radar.gif\",\n",
+    "    coordinates=\n",
+    "    [\n",
+    "        [-80.425, 46.437],\n",
+    "        [-71.516, 46.437],\n",
+    "        [-71.516, 37.936],\n",
+    "        [-80.425, 37.936]\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8c5e541-4467-4025-8216-3dfe228f8ae4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc.add_video_layer(\n",
+    "    urls=\n",
+    "    [\n",
+    "        'https://static-assets.mapbox.com/mapbox-gl-js/drone.mp4',\n",
+    "        'https://static-assets.mapbox.com/mapbox-gl-js/drone.webm'\n",
+    "    ],\n",
+    "    coordinates=\n",
+    "    [\n",
+    "        [-122.51596391201019, 37.56238816766053],\n",
+    "        [-122.51467645168304, 37.56410183312965],\n",
+    "        [-122.51309394836426, 37.56339170854942],\n",
+    "        [-122.51423120498657, 37.56161849366671]\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da4fddb7-2b6e-4d6b-8dfd-9c72e662c39b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
