Change map for notebook test

--- a/ui-tests/tests/notebooks/Notebook.ipynb
+++ b/ui-tests/tests/notebooks/Notebook.ipynb
@@ -18,7 +18,7 @@
     "    opacity=0.6\n",
     ")\n",
     "\n",
-    "doc"
+    "doc\n"
    ]
   },
   {
@@ -31,12 +31,11 @@
     "doc = GISDocument(latitude=40.775, longitude=-73.973, zoom=13)\n",
     "\n",
     "doc.add_raster_layer(\n",
-    "    url=\"https://mt1.google.com/vt/lyrs=y&x={x}&y={y}&z={z}\",\n",
-    "    name=\"Google Satellite\",\n",
-    "    attribution=\"Google\",\n",
+    "    url=\"https://tile.openstreetmap.org/{z}/{x}/{y}.png\",\n",
+    "    name=\"Open Street Map\",\n",
+    "    attribution=\"OpenStreetMap\",\n",
     "    opacity=0.6\n",
     ")\n",
-    "\n",
     "doc"
    ]
   },
@@ -50,9 +49,9 @@
     "doc = GISDocument(latitude=40.775, longitude=-73.973, zoom=13)\n",
     "\n",
     "doc.add_raster_layer(\n",
-    "    url=\"https://mt1.google.com/vt/lyrs=y&x={x}&y={y}&z={z}\",\n",
-    "    name=\"Google Satellite\",\n",
-    "    attribution=\"Google\",\n",
+    "    url=\"https://tile.openstreetmap.org/{z}/{x}/{y}.png\",\n",
+    "    name=\"Open Street Map\",\n",
+    "    attribution=\"OpenStreetMap\",\n",
     "    opacity=0.6\n",
     ")\n",
     "\n",
