--- a/examples/Notebook.ipynb
+++ b/examples/Notebook.ipynb
@@ -57,7 +57,7 @@
     "    url=\"https://mt1.google.com/vt/lyrs=y&x={x}&y={y}&z={z}\",\n",
     "    name=\"Google Satellite\",\n",
     "    attribution=\"Google\",\n",
-    "    opacity=0.6\n",
+    "    opacity=0.6,\n",
     ")"
    ]
   },
@@ -80,13 +80,12 @@
    "source": [
     "doc.add_image_layer(\n",
     "    url=\"https://maplibre.org/maplibre-gl-js/docs/assets/radar.gif\",\n",
-    "    coordinates=\n",
-    "    [\n",
+    "    coordinates=[\n",
     "        [-80.425, 46.437],\n",
     "        [-71.516, 46.437],\n",
     "        [-71.516, 37.936],\n",
-    "        [-80.425, 37.936]\n",
-    "    ]\n",
+    "        [-80.425, 37.936],\n",
+    "    ],\n",
     ")"
    ]
   },
@@ -98,18 +97,16 @@
    "outputs": [],
    "source": [
     "doc.add_video_layer(\n",
-    "    urls=\n",
-    "    [\n",
-    "        'https://static-assets.mapbox.com/mapbox-gl-js/drone.mp4',\n",
-    "        'https://static-assets.mapbox.com/mapbox-gl-js/drone.webm'\n",
+    "    urls=[\n",
+    "        \"https://static-assets.mapbox.com/mapbox-gl-js/drone.mp4\",\n",
+    "        \"https://static-assets.mapbox.com/mapbox-gl-js/drone.webm\",\n",
     "    ],\n",
-    "    coordinates=\n",
-    "    [\n",
+    "    coordinates=[\n",
     "        [-122.51596391201019, 37.56238816766053],\n",
     "        [-122.51467645168304, 37.56410183312965],\n",
     "        [-122.51309394836426, 37.56339170854942],\n",
-    "        [-122.51423120498657, 37.56161849366671]\n",
-    "    ]\n",
+    "        [-122.51423120498657, 37.56161849366671],\n",
+    "    ],\n",
     ")"
    ]
   },
