--- a/ui-tests/tests/notebooks/Notebook.ipynb
+++ b/ui-tests/tests/notebooks/Notebook.ipynb
@@ -15,10 +15,10 @@
     "    url=\"https://mt1.google.com/vt/lyrs=y&x={x}&y={y}&z={z}\",\n",
     "    name=\"Google Satellite\",\n",
     "    attribution=\"Google\",\n",
-    "    opacity=0.6\n",
+    "    opacity=0.6,\n",
     ")\n",
     "\n",
-    "doc\n"
+    "doc"
    ]
   },
   {
@@ -34,7 +34,7 @@
     "    url=\"https://tile.openstreetmap.org/{z}/{x}/{y}.png\",\n",
     "    name=\"Open Street Map\",\n",
     "    attribution=\"OpenStreetMap\",\n",
-    "    opacity=0.6\n",
+    "    opacity=0.6,\n",
     ")\n",
     "doc"
    ]
@@ -52,14 +52,14 @@
     "    url=\"https://tile.openstreetmap.org/{z}/{x}/{y}.png\",\n",
     "    name=\"Open Street Map\",\n",
     "    attribution=\"OpenStreetMap\",\n",
-    "    opacity=0.6\n",
+    "    opacity=0.6,\n",
     ")\n",
     "\n",
     "doc.add_vectortile_layer(\n",
     "    url=\"https://planetarycomputer.microsoft.com/api/data/v1/vector/collections/ms-buildings/tilesets/global-footprints/tiles/{z}/{x}/{y}\",\n",
     "    source_layer=\"bingmlbuildings\",\n",
     "    max_zoom=13,\n",
-    "    min_zoom=13\n",
+    "    min_zoom=13,\n",
     ")\n",
     "\n",
     "doc"
