--- a/examples/vector_colors.ipynb
+++ b/examples/vector_colors.ipynb
@@ -2,22 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "1f5dc83a-eebe-4090-8c7a-79c92510dc73",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.ywidget-view+json": {
-       "model_id": "2b7a6a45bfe64ce7af78af7fbd2a754a",
+       "model_id": "79e075de1d8f4b039ad0d119775d9166",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "<jupytergis_lab.notebook.gis_document.GISDocument object at 0x7f8434606060>"
+       "<jupytergis_lab.notebook.gis_document.GISDocument object at 0x7f11941d0110>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26,9 +26,11 @@
     "from jupytergis_lab import GISDocument\n",
     "\n",
     "doc = GISDocument()\n",
-    "doc.add_geojson_layer(\n",
-    "    path=\"france_regions.json\",\n",
-    ")\n",
+    "\n",
+    "doc.add_geojson_layer(path=\"fr.json\", color_expr={\"fill-color\": \"#FF0000\"})\n",
+    "\n",
+    "doc.add_geojson_layer(path=\"eq.json\", color_expr={\"circle-fill-color\": \"#00FF00\"})\n",
+    "\n",
     "doc.add_raster_layer(\n",
     "    url=\"https://tile.openstreetmap.org/{z}/{x}/{y}.png\",\n",
     "    name=\"Google Satellite\",\n",
@@ -37,6 +39,14 @@
     ")\n",
     "doc"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9da5f69d-4b02-4056-bf64-ce4caa97d3cf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
