Use color expression for vector tile layer notebook api

--- a/examples/vector_colors.ipynb
+++ b/examples/vector_colors.ipynb
@@ -2,26 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1f5dc83a-eebe-4090-8c7a-79c92510dc73",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.ywidget-view+json": {
-       "model_id": "79e075de1d8f4b039ad0d119775d9166",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "<jupytergis_lab.notebook.gis_document.GISDocument object at 0x7f11941d0110>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from jupytergis_lab import GISDocument\n",
     "\n",
@@ -31,12 +15,7 @@
     "\n",
     "doc.add_geojson_layer(path=\"eq.json\", color_expr={\"circle-fill-color\": \"#00FF00\"})\n",
     "\n",
-    "doc.add_raster_layer(\n",
-    "    url=\"https://tile.openstreetmap.org/{z}/{x}/{y}.png\",\n",
-    "    name=\"Google Satellite\",\n",
-    "    attribution=\"Google\",\n",
-    "    opacity=0.6,\n",
-    ")\n",
+    "doc.add_raster_layer(url=\"https://tile.openstreetmap.org/{z}/{x}/{y}.png\")\n",
     "doc"
    ]
   },
@@ -46,7 +25,13 @@
    "id": "9da5f69d-4b02-4056-bf64-ce4caa97d3cf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "doc.add_vectortile_layer(\n",
+    "    url=\"https://basemaps.arcgis.com/arcgis/rest/services/World_Basemap_v2/VectorTileServer/tile/{z}/{y}/{x}.pbf\",\n",
+    "    source_layer=\"Continent\",\n",
+    "    color_expr={\"fill-color\": \"#00FF00\", \"circle-fill-color\": \"#FF0000\"},\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
