Update notebook test

--- a/ui-tests/tests/notebooks/Notebook.ipynb
+++ b/ui-tests/tests/notebooks/Notebook.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc = GISDocument(latitude=40.775, longitude=-73.973, zoom=13)\n",
+    "doc = GISDocument(latitude=20.718, longitude=129.940, zoom=4)\n",
     "\n",
     "doc.add_raster_layer(\n",
     "    url=\"https://tile.openstreetmap.org/{z}/{x}/{y}.png\",\n",
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc = GISDocument(latitude=40.775, longitude=-73.973, zoom=13)\n",
+    "doc = GISDocument(latitude=20.718, longitude=129.940, zoom=4)\n",
     "\n",
     "doc.add_raster_layer(\n",
     "    url=\"https://tile.openstreetmap.org/{z}/{x}/{y}.png\",\n",
@@ -55,12 +55,7 @@
     "    opacity=0.6,\n",
     ")\n",
     "\n",
-    "doc.add_vectortile_layer(\n",
-    "    url=\"https://planetarycomputer.microsoft.com/api/data/v1/vector/collections/ms-buildings/tilesets/global-footprints/tiles/{z}/{x}/{y}\",\n",
-    "    source_layer=\"bingmlbuildings\",\n",
-    "    max_zoom=13,\n",
-    "    min_zoom=13,\n",
-    ")\n",
+    "doc.add_geojson_layer(path=\"../gis-files/eq.json\")\n",
     "\n",
     "doc"
    ]
@@ -82,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
