Upload geojson file in test

--- a/ui-tests/tests/notebooks/Notebook.ipynb
+++ b/ui-tests/tests/notebooks/Notebook.ipynb
@@ -55,7 +55,7 @@
     "    opacity=0.6,\n",
     ")\n",
     "\n",
-    "doc.add_geojson_layer(path=\"../gis-files/eq.json\")\n",
+    "doc.add_geojson_layer(path=\"./eq.json\")\n",
     "\n",
     "doc"
    ]
