Add heatmaps to Notebook test

--- a/ui-tests/tests/notebooks/Notebook.ipynb
+++ b/ui-tests/tests/notebooks/Notebook.ipynb
@@ -59,6 +59,20 @@
     "\n",
     "doc"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a5fd3c6-2d81-4e93-be21-533df696d7b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc = GISDocument()\n",
+    "\n",
+    "doc.add_heatmap_layer(path=\"./eq.json\", feature=\"mag\")\n",
+    "\n",
+    "doc"
+   ]
   }
  ],
  "metadata": {
