Add add_vector_layer function

--- a/examples/Notebook.ipynb
+++ b/examples/Notebook.ipynb
@@ -74,6 +74,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a1e75c62-db0d-49ec-b6ff-2c7c01dc9642",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://github.com/opengeos/datasets/releases/download/world/countries.geojson\"\n",
+    "doc.add_vector_layer(path=url, name=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "664dca2f-e4ee-4fcb-994c-9940143d4a78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://github.com/opengeos/datasets/releases/download/world/continents.zip\"\n",
+    "doc.add_vector_layer(path=url, name=\"Shapefile\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3629be32-bf06-4f68-a734-9af3cc17a7e3",
    "metadata": {},
    "outputs": [],
@@ -106,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
