Add jupytergis-lite metapackage

--- a/examples/Notebook.ipynb
+++ b/examples/Notebook.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jupytergis_lab import GISDocument"
+    "from jupytergis import GISDocument"
    ]
   },
   {
