--- a/ui-tests/tests/notebooks/Notebook.ipynb
+++ b/ui-tests/tests/notebooks/Notebook.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jupytergis_lab import GISDocument\n",
+    "from jupytergis import GISDocument\n",
     "\n",
     "doc = GISDocument()\n",
     "\n",
