--- a/examples/vector_colors.ipynb
+++ b/examples/vector_colors.ipynb
@@ -23,7 +23,7 @@
     }
    ],
    "source": [
-    "from jupytergis_lab import GISDocument\n",
+    "from jupytergis import GISDocument\n",
     "\n",
     "doc = GISDocument()\n",
     "\n",
