Fix path to local file in notebook

--- a/examples/vector_colors.ipynb
+++ b/examples/vector_colors.ipynb
@@ -2,26 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "execution_state": "idle",
    "id": "1f5dc83a-eebe-4090-8c7a-79c92510dc73",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.ywidget-view+json": {
-       "model_id": "5fb9629e08654727ae4e77f6d0e76330",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "<jupytergis_lab.notebook.gis_document.GISDocument object at 0x7f926c3f3710>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from jupytergis import GISDocument\n",
     "\n",
@@ -29,7 +14,7 @@
     "\n",
     "doc.add_raster_layer(url=\"https://tile.openstreetmap.org/{z}/{x}/{y}.png\")\n",
     "\n",
-    "doc.add_geojson_layer(path=\"fr.json\", color_expr={\"fill-color\": \"#FF0000\"})\n",
+    "doc.add_geojson_layer(path=\"france_regions.json\", color_expr={\"fill-color\": \"#FF0000\"})\n",
     "\n",
     "doc.add_geojson_layer(path=\"eq.json\", color_expr={\"circle-fill-color\": \"#00FF00\"})\n",
     "\n",
@@ -39,21 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "execution_state": "idle",
    "id": "9da5f69d-4b02-4056-bf64-ce4caa97d3cf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'886a2a06-3d8d-4520-81d4-96f207495378'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "doc.add_vectortile_layer(\n",
     "    url=\"https://basemaps.arcgis.com/arcgis/rest/services/World_Basemap_v2/VectorTileServer/tile/{z}/{y}/{x}.pbf\",\n",
@@ -65,6 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "execution_state": "idle",
    "id": "e0d20393-8605-4b48-ad81-03ec308a0ee1",
    "metadata": {},
    "outputs": [],
@@ -87,7 +63,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
