Add basemap parameter to `explore()`

--- a/examples/explore.ipynb
+++ b/examples/explore.ipynb
@@ -83,7 +83,7 @@
     "from jupytergis import explore\n",
     "\n",
     "# Open a new exploration window\n",
-    "explore(city_gdf)"
+    "explore(city_gdf, layer_name=\"New Haven\", basemap=\"dark\")"
    ]
   }
  ],
