Proxy tile server through Jupyter server

--- a/examples/xarray.ipynb
+++ b/examples/xarray.ipynb
@@ -217,7 +217,10 @@
    "id": "39d9711b-d4fd-4e25-8cdf-f7345f69efc9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# not mandatory, but helps shutting down the kernel gracefully:\n",
+    "# await doc.stop_tile_server()"
+   ]
   }
  ],
  "metadata": {
