--- a/examples/jgis.ipynb
+++ b/examples/jgis.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "from jupytergis import GISDocument\n",
     "\n",
-    "doc = GISDocument(\"france_hiking.jGIS\")\n",
+    "doc = GISDocument(\"local.jGIS\")\n",
     "doc"
    ]
   }
