--- a/ui-tests/tests/notebooks/Notebook.ipynb
+++ b/ui-tests/tests/notebooks/Notebook.ipynb
@@ -55,7 +55,7 @@
     "    opacity=0.6,\n",
     ")\n",
     "\n",
-    "doc.add_geojson_layer(path=\"./eq.json\")\n",
+    "doc.add_geojson_layer(path=\"./eq.geojson\")\n",
     "\n",
     "doc"
    ]
@@ -69,7 +69,7 @@
    "source": [
     "doc = GISDocument()\n",
     "\n",
-    "doc.add_heatmap_layer(path=\"./eq.json\", feature=\"mag\")\n",
+    "doc.add_heatmap_layer(path=\"./eq.geojson\", feature=\"mag\")\n",
     "\n",
     "doc"
    ]
