--- a/examples/Notebook.ipynb
+++ b/examples/Notebook.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc.add_geojson_layer(path=\"france_regions.json\")"
+    "doc.add_geojson_layer(path=\"france_regions.geojson\")"
    ]
   },
   {
