Add new JGIS documents and examples for spatial data visualization
- Created new JGIS files: shapefile.jGIS, test.jGIS, and world.jGIS with various layers and sources.
- Added Jupyter notebooks for creating a new JGIS document, exploring data in a map, and opening existing JGIS projects.
- Implemented vector styling examples and added raster and GeoJSON layers to demonstrate usage of the JupyterGIS API.
- Enhanced documentation with markdown cells to provide context and instructions for users.

--- a/examples/xx - Explore_data_in_a_map.ipynb
+++ b/examples/xx - Explore_data_in_a_map.ipynb
@@ -3,24 +3,50 @@
   {
    "cell_type": "markdown",
    "id": "c3f4096f-cbd3-43e8-a986-520681f03581",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "# ESPM 157 - Intro to Spatial Data\n",
     "\n",
     "<https://espm-157.carlboettiger.info/spatial-1>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d1dbcb0",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Install dependencies:\n",
     "\n",
-    "Install dependencies:\n",
-    "\n",
-    "```bash\n",
-    "micromamba install geopandas ibis-duckdb\n",
-    "```"
+    "#!conda install geopandas ibis-framework\n",
+    "!mamba install geopandas ibis-framework -y"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "b76ae1f0-334e-41c0-9533-407c879b4ad6",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import ibis\n",
@@ -32,7 +58,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "837aa4e0-5eeb-48c1-97ce-3f8706503911",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "redlines = con.read_geo(\n",
@@ -44,7 +76,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4d3319fa-b3b4-4931-b073-98b649e41b65",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "city = redlines.filter(redlines.city == \"New Haven\")"
@@ -55,7 +93,12 @@
    "execution_count": null,
    "id": "34f7f4d6-28d6-4716-8e03-ac32c6ae3bb7",
    "metadata": {
-    "scrolled": true
+    "editable": true,
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -66,7 +109,13 @@
   {
    "cell_type": "markdown",
    "id": "d37a610a-1444-43a3-900f-dfe16a890ab9",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "## OK, but what about spatial context?\n",
     "\n",
@@ -77,7 +126,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6e68aaac-dfc0-42d8-a3b9-05fce59524b2",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from jupytergis import explore\n",
@@ -103,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
