--- a/examples/xx - Vector_styling.ipynb
+++ b/examples/xx - Vector_styling.ipynb
@@ -14,10 +14,10 @@
     "doc.add_raster_layer(url=\"https://tile.openstreetmap.org/{z}/{x}/{y}.png\")\n",
     "\n",
     "doc.add_geojson_layer(\n",
-    "    path=\"france_regions.geojson\", color_expr={\"fill-color\": \"#FF0000\"}\n",
+    "    path=\"data/france_regions.geojson\", color_expr={\"fill-color\": \"#FF0000\"}\n",
     ")\n",
     "\n",
-    "doc.add_geojson_layer(path=\"eq.geojson\", color_expr={\"circle-fill-color\": \"#00FF00\"})\n",
+    "doc.add_geojson_layer(path=\"data/eq.geojson\", color_expr={\"circle-fill-color\": \"#00FF00\"})\n",
     "\n",
     "\n",
     "doc"
@@ -35,6 +35,14 @@
     "    color_expr={\"fill-color\": \"#00FF00\", \"circle-fill-color\": \"#FF0000\"},\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4aa76ecc-5258-4d55-af11-aabc0f8e8a7f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -53,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
