--- a/examples/xx - Create_a_new_JGIS_document.ipynb
+++ b/examples/xx - Create_a_new_JGIS_document.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "639b7342-688d-47c6-be9f-d4f7e60b74e7",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from jupytergis import GISDocument\n",
@@ -12,6 +18,20 @@
     "doc = GISDocument(\"local.jGIS\")\n",
     "doc"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0644af37-5a03-4a07-ac17-fca39d7ba45b",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -30,7 +50,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
