--- a/examples/xx - Open_an_existing_JGIS_Project_and_add_layers.ipynb
+++ b/examples/xx - Open_an_existing_JGIS_Project_and_add_layers.ipynb
@@ -3,7 +3,13 @@
   {
    "cell_type": "markdown",
    "id": "1008b547-f396-4960-8a80-118370f0fab1",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "# JupyterGIS Python API"
    ]
@@ -11,16 +17,28 @@
   {
    "cell_type": "markdown",
    "id": "28c64dd8-6b90-4408-bbeb-e5037add1fbc",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
-    "#### Simple usage"
+    "#### Simple usage of JupyterGIS"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "050e5936-f9e1-44ff-8bc9-a8556d7643ee",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from jupytergis import GISDocument"
@@ -30,19 +48,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9821d466-6ae7-418f-aea7-9d67153da7d6",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "doc = GISDocument(\"france_hiking.jGIS\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4a7000c-1bfc-4d41-8a0b-5c82c6e67716",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "doc = GISDocument(\"data/france_hiking.jGIS\")\n",
     "doc"
    ]
   },
@@ -50,7 +65,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5938ba70-36d7-4af3-b877-815464ef6d1a",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "doc.add_raster_layer(\n",
@@ -58,24 +79,37 @@
     "    name=\"Google Satellite\",\n",
     "    attribution=\"Google\",\n",
     "    opacity=0.6,\n",
-    ")"
+    ")\n",
+    "doc"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "69ac2a9a-d9a9-4170-b1f5-451b9fd5780e",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "doc.add_geojson_layer(path=\"france_regions.geojson\")"
+    "doc.add_geojson_layer(path=\"data/france_regions.geojson\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "3629be32-bf06-4f68-a734-9af3cc17a7e3",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "doc.add_image_layer(\n",
@@ -106,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
