add preliminary explanatory text

--- a/examples/xx - Open_an_existing_JGIS_Project_and_add_layers.ipynb
+++ b/examples/xx - Open_an_existing_JGIS_Project_and_add_layers.ipynb
@@ -25,7 +25,11 @@
     "tags": []
    },
    "source": [
-    "#### Simple usage of JupyterGIS"
+    "#### Simple usage of JupyterGIS\n",
+    "\n",
+    "In Tomlin's GIS & Cartographic Modeling, \"The Map\" is presented as a foundational concept for organizing spatial information. This concept is expanded through the use of *layers*. A layer is not the dataset itself, but rather a reference to a dataset along with instructions for how that data should be visualized, queried, or analyzed. Layers define which part of the data we want to work with, how it should appear on the map, and what attributes or features are relevant for our workflow.\n",
+    "\n",
+    "This distinction is important: the *dataset* is the raw spatial information—such as a GeoJSON file, a raster image, or a database table. The *layer* is a dynamic link to that dataset, specifying how it should be rendered (e.g., color, opacity, style), what subset of the data to use, and how it interacts with other layers. Layers allow us to build complex maps by stacking multiple visualizations and analyses, each tailored to a specific purpose, without altering the underlying data."
    ]
   },
   {
