Update example notebooks to create and open JGIS documents with improved explanations

--- a/examples/xx - Create_a_new_JGIS_document.ipynb
+++ b/examples/xx - Create_a_new_JGIS_document.ipynb
@@ -15,7 +15,8 @@
    "source": [
     "from jupytergis import GISDocument\n",
     "\n",
-    "doc = GISDocument(\"local.jGIS\")\n",
+    "doc = GISDocument()\n",
+    "\n",
     "doc"
    ]
   },
