--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -8,6 +8,41 @@
   url = {https://qgis.org}
 }
 
+@software{CONDAFORGE2025,
+  author = {conda-forge community},
+  title = {The conda-forge Project: Community-based Software Distribution Built on the conda Package Format and Ecosystem},
+  year = 2015,
+  publisher = {Zenodo},
+  doi = {10.5281/zenodo.4774217},
+  url = {https://conda-forge.org},
+}
+
+@article{OPENEO2021,
+  title = {The openEO API–Harmonising the Use of Earth Observation Cloud Services Using Virtual Data Cube Functionalities},
+  volume = {13},
+  ISSN = {2072-4292},
+  url = {http://dx.doi.org/10.3390/rs13061125},
+  DOI = {10.3390/rs13061125},
+  number = {6},
+  journal = {Remote Sensing},
+  publisher = {MDPI AG},
+  author = {Schramm,  Matthias and Pebesma,  Edzer and Milenković,  Milutin and Foresta,  Luca and Dries,  Jeroen and Jacob,  Alexander and Wagner,  Wolfgang and Mohr,  Matthias and Neteler,  Markus and Kadunc,  Miha and Miksa,  Tomasz and Kempeneers,  Pieter and Verbesselt,  Jan and G\"{o}ßwein,  Bernhard and Navacchi,  Claudio and Lippens,  Stefaan and Reiche,  Johannes},
+  year = {2021},
+  month = mar,
+  pages = {1125}
+}
+
+@InProceedings{CRDT2011,
+  author="Shapiro, Marc and Pregui{\c{c}}a, Nuno and Baquero, Carlos and Zawirski, Marek",
+  editor="D{\'e}fago, Xavier and Petit, Franck and Villain, Vincent",
+  title="Conflict-Free Replicated Data Types",
+  booktitle="Stabilization, Safety, and Security of Distributed Systems",
+  year="2011",
+  publisher="Springer Berlin Heidelberg",
+  address="Berlin, Heidelberg",
+  pages="386--400",
+}
+
 @inproceedings{YJS2015,
   author = {Kevin Jahns and others},
   title = {Yjs: A Framework for Near Real-Time P2P Shared Editing on Arbitrary Data Types},
@@ -16,13 +51,55 @@
   doi = {10.1007/978-3-319-19890-3_55}
 }
 
-@inproceedings{JupyterNotebooks2018,
+@inproceedings{JUPY2018,
   author = {Kluyver, Thomas and others},
   title = {Jupyter Notebooks—a publishing format for reproducible computational workflows},
   booktitle = {Positioning and Power in Academic Publishing: Players, Agents and Agendas},
   year = {2018},
   publisher = {IOS Press},
   doi = {10.3233/978-1-61499-649-1-87}
+}
+
+@inproceedings{BINDER2018,
+  series = {SciPy},
+  title = {Binder 2.0 - Reproducible,  interactive,  sharable environments for science at scale},
+  ISSN = {2575-9752},
+  url = {http://dx.doi.org/10.25080/Majora-4af1f417-011},
+  DOI = {10.25080/majora-4af1f417-011},
+  booktitle = {Proceedings of the 17th Python in Science Conference},
+  publisher = {SciPy},
+  author = {Jupyter,  Project and Bussonnier,  Matthias and Forde,  Jessica and Freeman,  Jeremy and Granger,  Brian and Head,  Tim and Holdgraf,  Chris and Kelley,  Kyle and Nalvarte,  Gladys and Osheroff,  Andrew and Pacer,  M and Panda,  Yuvi and Perez,  Fernando and Ragan-Kelley,  Benjamin and Willing,  Carol},
+  year = {2018},
+  pages = {113–120},
+  collection = {SciPy}
+}
+
+@article{Galaxy2024,
+  title = {The Galaxy platform for accessible,  reproducible,  and collaborative data analyses: 2024 update},
+  volume = {52},
+  ISSN = {1362-4962},
+  url = {http://dx.doi.org/10.1093/nar/gkae410},
+  DOI = {10.1093/nar/gkae410},
+  number = {W1},
+  journal = {Nucleic Acids Research},
+  publisher = {Oxford University Press (OUP)},
+  author = {Abueg,  Linelle Ann L and Afgan,  Enis and Allart,  Olivier and Awan,  Ahmed H and Bacon,  Wendi A and Baker,  Dannon and Bassetti,  Madeline and Batut,  Bérénice and Bernt,  Matthias and Blankenberg,  Daniel and Bombarely,  Aureliano and Bretaudeau,  Anthony and Bromhead,  Catherine J and Burke,  Melissa L and Capon,  Patrick K and Čech,  Martin and Chavero-Díez,  María and Chilton,  John M and Collins,  Tyler J and Coppens,  Frederik and Coraor,  Nate and Cuccuru,  Gianmauro and Cumbo,  Fabio and Davis,  John and De Geest,  Paul F and de Koning,  Willem and Demko,  Martin and DeSanto,  Assunta and Begines,  José Manuel Domínguez and Doyle,  Maria A and Droesbeke,  Bert and Erxleben-Eggenhofer,  Anika and F\"{o}ll,  Melanie C and Formenti,  Giulio and Fouilloux,  Anne and Gangazhe,  Rendani and Genthon,  Tanguy and Goecks,  Jeremy and Beltran,  Alejandra N Gonzalez and Goonasekera,  Nuwan A and Goué,  Nadia and Griffin,  Timothy J and Gr\"{u}ning,  Bj\"{o}rn A and Guerler,  Aysam and Gundersen,  Sveinung and Gustafsson,  Ove Johan Ragnar and Hall,  Christina and Harrop,  Thomas W and Hecht,  Helge and Heidari,  Alireza and Heisner,  Tillman and Heyl,  Florian and Hiltemann,  Saskia and Hotz,  Hans-Rudolf and Hyde,  Cameron J and Jagtap,  Pratik D and Jakiela,  Julia and Johnson,  James E and Joshi,  Jayadev and Jossé,  Marie and Jum’ah,  Khaled and Kalaš,  Matúš and Kamieniecka,  Katarzyna and Kayikcioglu,  Tunc and Konkol,  Markus and Kostrykin,  Leonid and Kucher,  Natalie and Kumar,  Anup and Kuntz,  Mira and Lariviere,  Delphine and Lazarus,  Ross and Bras,  Yvan Le and Corguillé,  Gildas Le and Lee,  Justin and Leo,  Simone and Liborio,  Leandro and Libouban,  Romane and Tabernero,  David López and Lopez-Delisle,  Lucille and Los,  Laila S and Mahmoud,  Alexandru and Makunin,  Igor and Marin,  Pierre and Mehta,  Subina and Mok,  Winnie and Moreno,  Pablo A and Morier-Genoud,  Fran\c{c}ois and Mosher,  Stephen and M\"{u}ller,  Teresa and Nasr,  Engy and Nekrutenko,  Anton and Nelson,  Tiffanie M and Oba,  Asime J and Ostrovsky,  Alexander and Polunina,  Polina V and Poterlowicz,  Krzysztof and Price,  Elliott J and Price,  Gareth R and Rasche,  Helena and Raubenolt,  Bryan and Royaux,  Coline and Sargent,  Luke and Savage,  Michelle T and Savchenko,  Volodymyr and Savchenko,  Denys and Schatz,  Michael C and Seguineau,  Pauline and Serrano-Solano,  Beatriz and Soranzo,  Nicola and Srikakulam,  Sanjay Kumar and Suderman,  Keith and Syme,  Anna E and Tangaro,  Marco Antonio and Tedds,  Jonathan A and Tekman,  Mehmet and Cheng (Mike) Thang,  Wai and Thanki,  Anil S and Uhl,  Michael and van den Beek,  Marius and Varshney,  Deepti and Vessio,  Jenn and Videm,  Pavankumar and Von Kuster,  Greg and Watson,  Gregory R and Whitaker-Allen,  Natalie and Winter,  Uwe and Wolstencroft,  Martin and Zambelli,  Federico and Zierep,  Paul and Zoabi,  Rand},
+  year = {2024},
+  month = may,
+  pages = {W83–W94}
+}
+
+@article{OpenOnDemand2018,
+  doi = {10.21105/joss.00622},
+  url = {https://doi.org/10.21105/joss.00622},
+  year = {2018},
+  publisher = {The Open Journal},
+  volume = {3},
+  number = {25},
+  pages = {622},
+  author = {Hudak, Dave and Johnson, Doug and Chalker, Alan and Nicklas, Jeremy and Franz, Eric and Dockendorf, Trey and McMichael, Brian L.},
+  title = {Open OnDemand: A web-based client portal for HPC centers},
+  journal = {Journal of Open Source Software}
 }
 
 @software{GDAL2025,
@@ -32,6 +109,21 @@
   publisher = {Open Source Geospatial Foundation},
   url = {https://gdal.org},
   doi = {10.5281/zenodo.5884351}
+}
+
+@article{NATURE2025,
+  title = {A prudent planetary limit for geologic carbon storage},
+  volume = {645},
+  ISSN = {1476-4687},
+  url = {http://dx.doi.org/10.1038/s41586-025-09423-y},
+  DOI = {10.1038/s41586-025-09423-y},
+  number = {8079},
+  journal = {Nature},
+  publisher = {Springer Science and Business Media LLC},
+  author = {Gidden,  Matthew J. and Joshi,  Siddharth and Armitage,  John J. and Christ,  Alina-Berenice and Boettcher,  Miranda and Brutschin,  Elina and K\"{o}berle,  Alexandre C. and Riahi,  Keywan and Schellnhuber,  Hans Joachim and Schleussner,  Carl-Friedrich and Rogelj,  Joeri},
+  year = {2025},
+  month = sep,
+  pages = {124–132}
 }
 
 @software{OpenLayers2025,
